--- a/android/brave_java_sources.gni
+++ b/android/brave_java_sources.gni
@@ -70,6 +70,7 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/preferences/website/BraveSiteSettingsPreferencesBase.java",
   "../../brave/android/java/org/chromium/chrome/browser/preferences/website/DesktopModePreferences.java",
   "../../brave/android/java/org/chromium/chrome/browser/preferences/website/PlayYTVideoInBrowserPreferences.java",
+  "../../brave/android/java/org/chromium/chrome/browser/services/BraveOvrGoogleServicesManager.java",
   "../../brave/android/java/org/chromium/chrome/browser/qrreader/BarcodeTracker.java",
   "../../brave/android/java/org/chromium/chrome/browser/qrreader/BarcodeTrackerFactory.java",
   "../../brave/android/java/org/chromium/chrome/browser/qrreader/CameraSource.java",
